projects/vb6parse/snapshots/syntax/statements/system_interaction/unload/unload_all_forms_except_main.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CloseAll
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: f
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Form
                - kind: Newline
                  text: "\n"
            - kind: ForEachStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: EachKeyword
                  text: Each
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: f
                - kind: Whitespace
                  text: " "
                - kind: InKeyword
                  text: In
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Forms
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: IfStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: IfKeyword
                          text: If
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: MemberAccessExpression
                              children:
                                - kind: Identifier
                                  text: f
                                - kind: PeriodOperator
                                  text: "."
                                - kind: NameKeyword
                                  text: Name
                            - kind: Whitespace
                              text: " "
                            - kind: InequalityOperator
                              text: "<>"
                            - kind: Whitespace
                              text: " "
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"frmMain\""
                        - kind: Whitespace
                          text: " "
                        - kind: ThenKeyword
                          text: Then
                        - kind: Newline
                          text: "\n"
                        - kind: StatementList
                          children:
                            - kind: UnloadStatement
                              children:
                                - kind: Whitespace
                                  text: "            "
                                - kind: UnloadKeyword
                                  text: Unload
                                - kind: Whitespace
                                  text: " "
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: f
                            - kind: Newline
                              text: "\n"
                            - kind: Whitespace
                              text: "        "
                        - kind: EndKeyword
                          text: End
                        - kind: Whitespace
                          text: " "
                        - kind: IfKeyword
                          text: If
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: f
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
