projects/vb6parse/snapshots/syntax/statements/system_interaction/unload/unload_button_click.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/unload.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Button_Cancel_Click
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: UnloadStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: UnloadKeyword
                  text: Unload
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: MeKeyword
                      text: Me
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
